sites/akvo-flow-web/src/App.css
html,
body {
    scroll-behavior: smooth;
    overflow-x: hidden;
    min-width:0;
    min-height:0;
}

h4 {
    font-size: 1.2rem!important;
}

h5 {
    font-size: 1.2rem!important;
}

.wrapper {
    height: 100%;
    min-width:0;
    min-height:0;
    overflow: hidden;
}

nav.navbar-group {
    background-color:#ffffff!important;
}

input {
    font-size: 12px;
}

.text-sm {
    font-size: 14px;
    margin-bottom: 5px;
    display: block;
}

.sidebar-wrapper {
    min-width:334px !important;
    min-height: 100vh;
    margin-left: -334px;
    -webkit-transition: margin .1s ease-out;
    -moz-transition: margin .1s ease-out;
    -o-transition: margin .1s ease-out;
    transition: margin .1s ease-out;
}

.sidebar-wrapper .sidebar-heading {
    padding: 0.875rem 1.25rem;
    font-size: 1.2rem;
}

.form-check.localization {
    padding-top: 0rem;
}

.sidebar-wrapper .list-group {
    width: 20rem;
    cursor: pointer;
}

button.btn-repeatable{
    line-height: 9px;
    font-size: 12px;
}

.submit-block {
    text-align: center;
    padding: 8px;
    border-bottom: 1px #ddd solid;
    border-top: 1px #ddd solid;
}

.data-point {
    margin-left: auto;
}

.data-point-name {
    font-size: 16px;
    margin-bottom: auto;
    text-align: center;
}

.data-point-id {
    display: block;
    font-size: 14px;
    text-align: center;
}

.data-point-icon {
    margin-right: 10px;
    text-align: right;
}

.page-content-wrapper {
    height: 100%;
    min-width: 100vw;
}

.fixed-container {
    height: calc(100% - 130px);
    min-height:0px;
    overflow-y: scroll;
    min-height: 0;
}

.wrapper.toggled .sidebar-wrapper {
    margin-left: 0;
}

.bg-current {
    background-color: #dae0e5 !important;
}

.row-header {
    margin-bottom: 10px;
    border-bottom: 1px solid #ddd;
}

.card {
    margin-bottom: 1rem !important;
    margin-top: 1rem !important;
}

.card-body {
    background: #f8f9fa;
}

.card-title {
    border-bottom: 1px solid #dfdfdf;
    padding: 0px 0px 20px;
}

.card-title .badge.badge-warning {
    float: right;
    color: #FFF;
    border-radius: 100%;
    width: 20px;
    line-height: 10px;
    border: 2px solid #FFF;
}

.badge-header {
    display:inline-block;
    margin-right:10px;
    cursor: pointer;
}
.badge-header .badge-left,
.badge-header .badge-right {
    line-height: 16px;
    font-weight:400!important;
    color:#ffffff;
} 

.toast-header strong.mr-auto {
    position: relative;
    max-width: 100%;
    width: 100%;
}


.info-survey-name {
    display: inline-block;
}

.badge.badge-user {
    position: absolute;
    padding: 5px;
    text-transform: uppercase;
    right: -8px;
}

.badge-green{
    background-color:#4b2!important;
    color: #ffffff!important;
}
.badge-red{
    background-color:#c34242!important;
    color: #ffffff!important;
}

.badge-header .badge-left {
    border-right:.5px solid #ddd;
}
.badge-left{
    border-radius: .25rem 0 0 .25rem!important;
}

.badge-right {
    border-radius: 0 .25rem .25rem 0!important;
}

.swal-button-container {
    width: 100%;
}

.swal-button {
    width: 100%;
    background-color: #007bff;
    border-color: #007bff;
    display: inline-block;
    font-weight: 400;
    text-align: center;
    vertical-align: middle;
    -webkit-user-select: none;
    -moz-user-select: none;
    user-select: none;
    border: none;
    padding: .375rem .75rem;
    font-size: 1rem;
    line-height: 1.5;
    border-radius: .25rem;
    transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
}

.swal2-html-container .form-check {
    text-align: left;
    font-size: 16px;
}


.form-password-label {
    text-align: left;
    width: 100%;
    padding-left: 12px;
}

@media (min-width: 768px) {
    .sidebar-wrapper {
        margin-left: 0;
    }
    .page-content-wrapper {
        min-width: 0;
        width: 100%;
    }
    .wrapper.toggled .sidebar-wrapper {
        margin-left: -335px;
    }
}

img.responsive-image {
    width: 100%;
    padding: 20px;
}

.display-cache-image{
    display:inline-block;
    color:#6c757d;
    font-weight:bold;
    font-size:.825rem;
}

.hidden {
    display: none !important;
}

.text-red {
    color: #c34242;
}

/* Tooltip */
.help-tooltip{
    cursor:pointer;
    padding-left: 10px;
}

.tooltips{
    max-width:30%;
    font-size: .8rem !important;
    pointer-events: auto !important;
    padding: 10px !important;
    text-align: justify;
}
.tooltips:hover{
    visibility: visible !important;
    opacity: 1 !important;
}
.tooltips a {
    color: #86c0ff;
}
.tooltips a:hover {
    text-decoration: none;
    color: #86c0ff;
}
.tooltips ul {
    margin-block-start: 3px;
    padding-inline-start: 20px;
}
.tooltips ul li{
    padding: 2px;
}

/* Swall*/
.fade-in {
  animation: fadeIn ease 10s;
  -webkit-animation: fadeIn ease 10s;
  -moz-animation: fadeIn ease 10s;
  -o-animation: fadeIn ease 10s;
  -ms-animation: fadeIn ease 10s;
}
.fade-out {
  animation: fadeOut ease 8s;
  -webkit-animation: fadeOut ease 8s;
  -moz-animation: fadeOut ease 8s;
  -o-animation: fadeOut ease 8s;
  -ms-animation: fadeOut ease 8s;
}

@keyframes fadeIn,
@-moz-keyframes fadeIn,
@-o-keyframes fadeIn,
@-ms-keyframes fadeIn {
  0% { opacity:0; }
  100% { opacity:1; }
}

@keyframes fadeOut,
@-moz-keyframes fadeOut,
@-o-keyframes fadeOut,
@-ms-keyframes fadeOut {
  0% { opacity:1; }
  100% { opacity:0; }
}

/* Leaflet */

.map-container {
    width: 100%;
    height: 400px;
}

.leaflet-container {
    height: 400px;
    width: 100%; 
    margin: 0 auto;
}

/* Leaflet */

/* RepatGroup */
.repeat-group-line{
    padding: 5px 0;
}
.repeat-group-header{
    padding: 10px 0 0px;
}
.repeat-group-delete{
    margin-bottom: 20px;
}
.repeat-group-custom-intro {
    text-align: left;
    font-size: 14px;
    border-bottom: 1px #ddd solid;
    padding: .5rem 1rem;
}
.repeat-group-custom-intro span{
    text-align:justify;
}


/* RepatGroup */

/* Exif */
.exif-detail {
    text-align: left;
    font-size: initial;
}
.exif-detail strong {
    font-weight: 500;
    font-size: 15px;
}
/* Exif */

/* Overview */
.badge-overview {
    display:inline-block;
    cursor: pointer;
    float: right;
}
.badge-overview .badge-left,
.badge-overview .badge-right {
    line-height: 16px;
    font-weight:400!important;
    color:#ffffff;
} 
.ov-list{
    padding: .5rem;
}
.ov-list:hover{
    background-color:#dae0e5;
}

.ov-answer {
    float:right;
    display: block;
    font-size: 14px;
    text-align:right;
}

.ov-answer div {
    text-align:right;
    display: inline-block;
    min-width:100%;
}
.ov-answer div span {
    text-align:right;
    float:right;
    min-width: 10%;
}
.ov-answer div span.ov-span {
    max-width: 90%;
    padding-right: 5px;
}

.ov-alerts {
    background: #ffd0d0;
    animation: blink 1s;
    animation-iteration-count: 2;
}
.card-body {
    -webkit-transition: background .25s ease-in;
    -moz-transition: background .25s ease-in;  
    -o-transition: background .25s ease-in;  
    transition: background .25s ease-in;
}

.more-info {
    margin-top: 5px;
    margin-left: 25px;
    padding: 0px 2px 1px 2px;
    font-size: 70%;
    border: 1px solid rgba(108,117,125, 0.2);
    border-radius: .2rem;
}

.more-info.more-info-active {
    border-radius: .2rem .2rem 0 0;
}

.more-info-content {
    margin-left: 25px;
    padding: 10px;
    color: #6c757d;
    border: solid 1px #d5d6d8;
    background: #eaeaea;
    font-size: small;
    border-top-right-radius: .2rem;
    border-bottom-left-radius: .2rem;
    border-bottom-right-radius: .2rem;
}

.parent-options {
    margin-left: -1.25rem;
    margin-bottom: 1rem;
}

.header-left h4{
    margin-top: .5rem;
    display: inline-block !important;
    padding-right: 10px;
}

.trans-lang,
.trans-lang-opt {
    margin-top: 5px;
    margin-bottom: 5px;
    color: #6c757d;
    border: solid 1px #d5d6d8;
    background: #eaeaea;
    display: table;
    padding: 5px 10px;
    border-radius: 5px;
    font-size: small;
}

.trans-lang-group {
    display:block;
    margin-top: 5px;
    border: solid 1px #d5d6d8;
    background: #eaeaea;
    color: #485056;
    padding: 3px 7px;
    border-radius: 5px;
    font-size: 12px;
}

.trans-lang-opt {
    display: table;
    padding: 0 5px;
    margin-left: 5px;
}

.trans-lang-ttp {
    display: block;
    border-top: 1px dashed #83888c;
    padding-top: 10px;
    margin-top: 10px;
}

span.badge.badge-circle {
    display: inline-block;
    width: 10px;
    height: 10px;
    border-radius: 100%;
}

button:focus {
    outline: none!important;
}

.btn-primary:focus,
.btn-success:focus,
.btn-secondary:focus,
.btn-outline-primary:focus,
.btn-outline-success:focus,
.btn-outline-secondary:focus {
    box-shadow:none!important;
}

.mandatory-icon {
    position: absolute;
    right: 0px;
    padding: 5px;
    border-bottom-left-radius: 5px;
    border-left: #dfdfdf 1px solid;
    border-bottom: #dfdfdf 1px solid;
}

.question-number{
    vertical-align:top;
    display: inline-block;
    width: 25px;
}

.question-text {
    display: inline-block;
    width: calc(100% - 30px);
}

@keyframes blink { 50% { background:#f8f9fa ; }  }

.form-check-input:disabled~.form-check-label,
.form-check-input[disabled]~.form-check-label {
    color: #212529!important;
}

